expand: Claude Code Java Library Development Guide to 1300w