@@ -324,6 +324,119 @@ Follow semantic versioning to communicate changes clearly:
 Document breaking changes in a CHANGELOG and provide migration guides for major version updates.
 
 
+## Using Claude Code for Iterative API Refinement
+
+API design rarely comes out perfect on the first pass. Claude Code accelerates the iteration cycle by analyzing your existing API and suggesting improvements before you commit to a stable release.
+
+A practical workflow: write a first draft of your public API, then ask Claude Code to review it with specific questions like "Are the method names consistent?" or "Does the parameter ordering follow a predictable pattern?" Claude Code will surface inconsistencies that are easy to miss when you are close to the code.
+
+For example, if your library has a method `JsonProcessor.parseString(csv)` but elsewhere uses `CsvParser.fromText(input)`, Claude Code flags the naming inconsistency and suggests standardizing to one convention. Addressing these issues before v1.0 avoids painful migration guides later.
+
+Keep a dedicated `DESIGN_NOTES.md` file tracking API decisions and their rationale. When you revisit the API six months later, having this context prevents re-litigating decisions that were made deliberately.
+
+
+## Publishing to Maven Central
+
+Getting your library onto Maven Central makes it accessible to the broader Java ecosystem without requiring users to add custom repositories.
+
+The publishing process requires:
+
+1. A Sonatype OSSRH account and approved group ID
+2. GPG key for artifact signing
+3. A `pom.xml` with required metadata (name, description, URL, licenses, SCM, developers)
+
+Configure signing in your Maven build:
+
+```xml
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-gpg-plugin</artifactId>
+      <version>3.1.0</version>
+      <executions>
+        <execution>
+          <id>sign-artifacts</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>sign</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
+```
+
+Claude Code helps generate the full `pom.xml` with all required Central publishing metadata when you describe your library's purpose and provide your group ID.
+
+
+## Testing Compatibility Across Java Versions
+
+Java library authors support multiple JVM versions simultaneously. Configure your test matrix to catch version-specific issues early:
+
+```xml
+<!-- Surefire plugin with JVM compatibility options -->
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.2.5</version>
+  <configuration>
+    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+  </configuration>
+</plugin>
+```
+
+In your GitHub Actions workflow, run tests against multiple JDK releases:
+
+```yaml
+strategy:
+  matrix:
+    java: ['17', '21', '23']
+steps:
+  - name: Set up JDK ${{ matrix.java }}
+    uses: actions/setup-java@v4
+    with:
+      java-version: ${{ matrix.java }}
+      distribution: 'temurin'
+  - name: Run tests
+    run: mvn test
+```
+
+Claude Code can audit your codebase for APIs deprecated in newer Java versions, helping you address compatibility issues proactively rather than discovering them after a user files a bug report.
+
+
+## Handling Optional Dependencies Gracefully
+
+Libraries that integrate with optional external tools — logging frameworks, serialization libraries, HTTP clients — should not force those dependencies on users who do not need them.
+
+Use optional Maven dependencies combined with runtime class detection:
+
+```java
+public class JsonSupport {
+    private static final boolean JACKSON_AVAILABLE;
+
+    static {
+        boolean available;
+        try {
+            Class.forName("com.fasterxml.jackson.databind.ObjectMapper");
+            available = true;
+        } catch (ClassNotFoundException e) {
+            available = false;
+        }
+        JACKSON_AVAILABLE = available;
+    }
+
+    public static boolean isJacksonAvailable() {
+        return JACKSON_AVAILABLE;
+    }
+}
+```
+
+This pattern lets users include Jackson if they want serialization support, but your library remains functional without it. Clearly document which optional dependencies unlock which features in your README and Javadoc.
+
+Claude Code can generate the full conditional loading pattern for any dependency, including the necessary null checks and fallback implementations that keep your core API stable regardless of what users have on their classpath.
+
 
 ## Related Reading
 
